Kelsey Development Sandbox/src/objects/DS_PTSD_CA_B__c.object
<CustomObject>
    <fields>
        <fullName>BDOAPTSDP__c</fullName>
        <description>Date of administration? Parent</description>
        <label>BDOAPTSDP</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BDOAPTSD__c</fullName>
        <description>PTSD date of administration</description>
        <label>BDOAPTSD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BDOV__c</fullName>
        <formula>Background_ID__r.BDOV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BDOV</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BMETPTSDP__c</fullName>
        <description>How was this form administered? Parent</description>
        <label>BMETPTSDP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMETPTSD__c</fullName>
        <label>BMETPTSD</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPTSAB1P__c</fullName>
        <defaultValue>0</defaultValue>
        <description>PTSD RI Symptom B1 Parent</description>
        <label>BPTSAB1P</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSAB1__c</fullName>
        <label>BPTSAB1</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSAB2P__c</fullName>
        <defaultValue>0</defaultValue>
        <description>PTSD RI Symptom B2 Parent</description>
        <label>BPTSAB2P</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSAB2__c</fullName>
        <label>BPTSAB2</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSAB3P__c</fullName>
        <defaultValue>0</defaultValue>
        <description>PTSD RI Symptom B3 Parent</description>
        <label>BPTSAB3P</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSAB3__c</fullName>
        <label>BPTSAB3</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSAC1P__c</fullName>
        <defaultValue>0</defaultValue>
        <description>PTSD RI Symptom C1 Parent</description>
        <label>BPTSAC1P</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSAC1__c</fullName>
        <label>BPTSAC1</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSAC2P__c</fullName>
        <defaultValue>0</defaultValue>
        <description>PTSD RI Symptom C2 Parent</description>
        <label>BPTSAC2P</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSAC2__c</fullName>
        <label>BPTSAC2</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSAD1P__c</fullName>
        <defaultValue>0</defaultValue>
        <description>PTSD RI Symptom D1 Parent</description>
        <label>BPTSAD1P</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSAD1__c</fullName>
        <label>BPTSAD1</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSAD2P__c</fullName>
        <defaultValue>0</defaultValue>
        <description>PTSD RI Symptom D2 Parent</description>
        <label>BPTSAD2P</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSAD2__c</fullName>
        <label>BPTSAD2</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSAD3P__c</fullName>
        <defaultValue>0</defaultValue>
        <description>PTSD RI Symptom D3 Parent</description>
        <label>BPTSAD3P</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSAD3__c</fullName>
        <label>BPTSAD3</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSAE1P__c</fullName>
        <defaultValue>0</defaultValue>
        <description>PTSD RI Symptom E1 Parent</description>
        <label>BPTSAE1P</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSAE1__c</fullName>
        <label>BPTSAE1</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSAE2P__c</fullName>
        <defaultValue>0</defaultValue>
        <description>PTSD RI Symptom E2 Parent</description>
        <label>BPTSAE2P</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSAE2__c</fullName>
        <label>BPTSAE2</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSAE3P__c</fullName>
        <defaultValue>0</defaultValue>
        <description>PTSD RI Symptom E3 Parent</description>
        <label>BPTSAE3P</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSAE3__c</fullName>
        <label>BPTSAE3</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSAPPCNP__c</fullName>
        <description>Record is Appropriate Parent</description>
        <label>BPTSAPPCNP</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSAPPCN__c</fullName>
        <label>BPTSAPPCN</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSAPPCP__c</fullName>
        <description>Record is Appropriate Parent</description>
        <formula>IF( NOT(ISNULL(BPTSAPPCNP__c  )), IF(BPTSAPPCNP__c  =  1 , &apos;Yes&apos;, &apos;No&apos;), NULL)</formula>
        <label>BPTSAPPCP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BPTSAPPC__c</fullName>
        <formula>IF( NOT(ISNULL(BPTSAPPCN__c )), IF(BPTSAPPCN__c = 1 , &apos;Yes&apos;, &apos;No&apos;), NULL)</formula>
        <label>BPTSAPPC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BPTSBCNP__c</fullName>
        <description>PTSD Crit B cutoff - Num Parent</description>
        <label>BPTSBCNP</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSBCN__c</fullName>
        <label>BPTSBCN</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSBMNP__c</fullName>
        <description>PTSD Crit B met - Num Parent</description>
        <formula>IF( NOT(ISNULL(BPTSBCNP__c)), IF(BPTSBCNP__c   &gt;=  1, 1, 0 ), NULL)</formula>
        <label>BPTSBMNP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSBMN__c</fullName>
        <formula>IF(NOT(ISNULL(BPTSBCN__c)), IF(BPTSBCN__c &gt;= 1, 1, 0 ), NULL)</formula>
        <label>BPTSBMN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSBMP__c</fullName>
        <description>PTSD Crit B met Parent</description>
        <formula>IF( NOT(ISNULL(BPTSBMNP__c)), IF(BPTSBMNP__c  =  1, &quot;Yes&quot;, &quot;No&quot; ), NULL)</formula>
        <label>BPTSBMP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BPTSBM__c</fullName>
        <formula>IF(NOT(ISNULL(BPTSBMN__c)), IF(BPTSBMN__c = 1, &quot;Yes&quot;, &quot;No&quot; ), NULL)</formula>
        <label>BPTSBM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BPTSBRNP__c</fullName>
        <description>PTSD Crit B raw score - Num Parent</description>
        <formula>BPTSAB1P__c  +  BPTSAB2P__c  +  BPTSAB3P__c  +  BPTSAB4P__c  +  BPTSAB5P__c</formula>
        <label>BPTSBRNP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSBRN__c</fullName>
        <formula>BPTSAB1__c  +  BPTSAB2__c  +  BPTSAB3__c  +  BPTSAB4__c  +  BPTSAB5__c</formula>
        <label>BPTSBRN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSCCNP__c</fullName>
        <description>PTSD Crit C cutoff - Num Parent</description>
        <label>BPTSCCNP</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSCCN__c</fullName>
        <label>BPTSCCN</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSCMNP__c</fullName>
        <description>PTSD Crit C met - Num Parent</description>
        <formula>IF( NOT(ISNULL(BPTSCCNP__c)), IF(BPTSCCNP__c  &gt;=  1, 1, 0 ), NULL)</formula>
        <label>BPTSCMNP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSCMN__c</fullName>
        <formula>IF( NOT(ISNULL(BPTSCCN__c)), IF(BPTSCCN__c &gt;= 1, 1, 0 ), NULL)</formula>
        <label>BPTSCMN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSCMP__c</fullName>
        <description>PTSD Crit C met Parent</description>
        <formula>IF( NOT(ISNULL(BPTSCMNP__c)), IF(BPTSCMNP__c  =  1, &quot;Yes&quot;, &quot;No&quot; ), NULL)</formula>
        <label>BPTSCMP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BPTSCM__c</fullName>
        <formula>IF( NOT(ISNULL(BPTSCMN__c)), IF(BPTSCMN__c = 1, &quot;Yes&quot;, &quot;No&quot; ), NULL)</formula>
        <label>BPTSCM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BPTSCRNP__c</fullName>
        <description>PTSD Crit C raw score - Num Parent</description>
        <formula>BPTSAC1P__c  + BPTSAC2P__c</formula>
        <label>BPTSCRNP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSCRN__c</fullName>
        <formula>BPTSAC1__c  +  BPTSAC2__c</formula>
        <label>BPTSCRN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSD1P__c</fullName>
        <description>Do these reactions (thoughts and feelings) bother or upset your child a lot? Parent</description>
        <label>BPTSD1P</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPTSD1SPP__c</fullName>
        <description>Describe distress Parent</description>
        <label>BPTSD1SPP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BPTSD1__c</fullName>
        <label>BPTSD1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPTSDCNP__c</fullName>
        <description>PTSD Crit D cutoff - Num Parent</description>
        <label>BPTSDCNP</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSDCN__c</fullName>
        <label>BPTSDCN</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSDCP__c</fullName>
        <description>Significant Distress - FORMULA Parent</description>
        <formula>VALUE(TEXT( BPTSD1P__c ))  =  1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BPTSDCP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPTSDC__c</fullName>
        <formula>VALUE(TEXT( BPTSD1__c )) = 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BPTSDC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPTSDMNP__c</fullName>
        <description>PTSD Crit D met - Num Parent</description>
        <formula>IF( NOT(ISNULL(BPTSDCNP__c)), IF(BPTSDCNP__c  &gt;=  2, 1, 0 ), NULL)</formula>
        <label>BPTSDMNP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSDMN__c</fullName>
        <formula>IF( NOT(ISNULL(BPTSDCN__c)), IF(BPTSDCN__c &gt;= 2, 1, 0 ), NULL)</formula>
        <label>BPTSDMN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSDMP__c</fullName>
        <description>PTSD Crit D met Parent</description>
        <formula>IF( NOT(ISNULL(BPTSDMNP__c)), IF(BPTSDMNP__c  =  1, &quot;Yes&quot;, &quot;No&quot; ), NULL)</formula>
        <label>BPTSDMP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BPTSDM__c</fullName>
        <formula>IF( NOT(ISNULL(BPTSDMN__c)), IF(BPTSDMN__c = 1, &quot;Yes&quot;, &quot;No&quot; ), NULL)</formula>
        <label>BPTSDM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BPTSDRNP__c</fullName>
        <description>PTSD Crit D raw score - Num Parent</description>
        <formula>BPTSAD1P__c  +  BPTSAD2P__c  +  BPTSAD3P__c  +  BPTSAD4P__c  +  BPTSAD5P__c  +  BPTSAD6P__c  +  BPTSAD7P__c</formula>
        <label>BPTSDRNP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSDRN__c</fullName>
        <formula>BPTSAD1__c  +  BPTSAD2__c  +  BPTSAD3__c  +  BPTSAD4__c  +  BPTSAD5__c  +  BPTSAD6__c  +  BPTSAD7__c</formula>
        <label>BPTSDRN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSDURAP__c</fullName>
        <description>Have some of these reactions lasted at least one month? Parent</description>
        <label>BPTSDURAP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPTSDURA__c</fullName>
        <description>DSM-5 Diagnosis :Symptom duration greater than one month</description>
        <label>BPTSDURA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPTSECNP__c</fullName>
        <description>PTSD Crit E cutoff - Num Parent</description>
        <label>BPTSECNP</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSECN__c</fullName>
        <label>BPTSECN</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSEMNP__c</fullName>
        <description>PTSD Crit E met - Num Parent</description>
        <formula>IF( NOT(ISNULL(BPTSECNP__c)), IF(BPTSECNP__c  &gt;=  2, 1, 0 ), NULL)</formula>
        <label>BPTSEMNP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSEMN__c</fullName>
        <formula>IF( NOT(ISNULL(BPTSECN__c)), IF(BPTSECN__c &gt;= 2, 1, 0 ), NULL)</formula>
        <label>BPTSEMN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSEMP__c</fullName>
        <description>PTSD Crit E met Parent</description>
        <formula>IF( NOT(ISNULL(BPTSEMNP__c)), IF(BPTSEMNP__c  =  1, &quot;Yes&quot;, &quot;No&quot; ), NULL)</formula>
        <label>BPTSEMP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BPTSEM__c</fullName>
        <formula>IF( NOT(ISNULL(BPTSEMN__c)), IF(BPTSEMN__c = 1, &quot;Yes&quot;, &quot;No&quot; ), NULL)</formula>
        <label>BPTSEM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BPTSERNP__c</fullName>
        <description>PTSD Crit E raw score - Num Parent</description>
        <formula>BPTSAE1P__c  +  BPTSAE2P__c  +  BPTSAE3P__c  +  BPTSAE4P__c  +  BPTSAE5P__c  +  BPTSAE6P__c</formula>
        <label>BPTSERNP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSERN__c</fullName>
        <formula>BPTSAE1__c  +  BPTSAE2__c  +  BPTSAE3__c  +  BPTSAE4__c  +  BPTSAE5__c  +  BPTSAE6__c</formula>
        <label>BPTSERN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSFCP__c</fullName>
        <description>Significant Functional Impairment - FORMULA Parent</description>
        <formula>OR( BPTSFHCP__c, BPTSFSCP__c, BPTSFRCP__c, BPTSFPCP__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BPTSFCP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPTSFC__c</fullName>
        <formula>OR( BPTSFHC__c, BPTSFSC__c, BPTSFRC__c, BPTSFPC__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BPTSFC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPTSFH1P__c</fullName>
        <description>Do these reactions (thoughts and feelings) make it harder for your child to get along with people at home? Parent</description>
        <label>BPTSFH1P</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPTSFH1__c</fullName>
        <label>BPTSFH1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPTSFH2P__c</fullName>
        <description>Do these reactions (thoughts and feelings) get your child into trouble at home? Parent</description>
        <label>BPTSFH2P</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPTSFH2__c</fullName>
        <label>BPTSFH2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPTSFH3P__c</fullName>
        <description>Do these reactions (thoughts and feelings) cause your child to have some other problem at home? Parent</description>
        <label>BPTSFH3P</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPTSFH3__c</fullName>
        <label>BPTSFH3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPTSFHCP__c</fullName>
        <description>Significant Functional Impairment Home - FORMULA Parent</description>
        <formula>MAX( VALUE(TEXT(BPTSFH1P__c)) , VALUE(TEXT(BPTSFH2P__c)) , VALUE(TEXT(BPTSFH3P__c)) )  =  1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BPTSFHCP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPTSFHC__c</fullName>
        <formula>MAX( VALUE(TEXT(BPTSFH1__c)) , VALUE(TEXT(BPTSFH2__c)) , VALUE(TEXT(BPTSFH3__c)) ) = 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BPTSFHC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPTSFHSPP__c</fullName>
        <description>Describe home Parent</description>
        <label>BPTSFHSPP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BPTSFHSP__c</fullName>
        <label>BPTSFHSP</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BPTSFP1P__c</fullName>
        <description>Do these reactions (thoughts and feelings) make it harder for your child to do important things that other kids his/her age are doing? Parent</description>
        <label>BPTSFP1P</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPTSFP1__c</fullName>
        <label>BPTSFP1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPTSFP2P__c</fullName>
        <description>Do these reactions interfere with other areas of your child&apos;s development? Parent</description>
        <label>BPTSFP2P</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPTSFPCP__c</fullName>
        <description>Significant Functional Impairment Developmental - FORMULA Parent</description>
        <formula>VALUE(TEXT(BPTSFP1P__c))  =  1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BPTSFPCP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPTSFPC__c</fullName>
        <formula>MAX( VALUE(TEXT(BPTSFP1__c)) )  = 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BPTSFPC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPTSFPSPP__c</fullName>
        <description>Developmental Progression Describe Parent</description>
        <label>BPTSFPSPP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BPTSFPSP__c</fullName>
        <label>BPTSFPSP</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BPTSFR1P__c</fullName>
        <description>Do these reactions (thoughts and feelings) make it harder for your child to get along with or make friends? Parent</description>
        <label>BPTSFR1P</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPTSFR1__c</fullName>
        <label>BPTSFR1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPTSFRCP__c</fullName>
        <description>Significant Functional Impairment Peer - FORMULA Parent</description>
        <formula>VALUE(TEXT(BPTSFR1P__c)) = 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BPTSFRCP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPTSFRC__c</fullName>
        <formula>VALUE(TEXT(BPTSFR1__c)) = 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BPTSFRC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPTSFRSPP__c</fullName>
        <description>Describe Peer Parent</description>
        <label>BPTSFRSPP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BPTSFRSP__c</fullName>
        <label>BPTSFRSP</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BPTSFS1P__c</fullName>
        <description>Do these reactions (thoughts and feelings) make it harder for your child to do well in school? Parent</description>
        <label>BPTSFS1P</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPTSFS1__c</fullName>
        <label>BPTSFS1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPTSFS2P__c</fullName>
        <description>Do these reactions (thoughts and feelings) cause your child other problems at school? Parent</description>
        <label>BPTSFS2P</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPTSFS2__c</fullName>
        <label>BPTSFS2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPTSFSCP__c</fullName>
        <description>Significant Functional Impairment School - FORMULA Parent</description>
        <formula>MAX( VALUE(TEXT(BPTSFS1P__c)) , VALUE(TEXT(BPTSFS2P__c)) ) =  1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BPTSFSCP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPTSFSC__c</fullName>
        <formula>MAX( VALUE(TEXT(BPTSFS1__c)) , VALUE(TEXT(BPTSFS2__c)) )  = 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BPTSFSC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPTSFSSPP__c</fullName>
        <description>Describe school Parent</description>
        <label>BPTSFSSPP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BPTSFSSP__c</fullName>
        <label>BPTSFSSP</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BPTSOCNP__c</fullName>
        <description>PTSD score criteria - Num Parent</description>
        <formula>IF( ( BPTSBMNP__c + BPTSCMNP__c + BPTSDMNP__c + BPTSEMNP__c + if(OR(BPTSDCP__c = true, BPTSFCP__c = true), 1, 0) + if(ISPICKVAL(BPTSDURAP__c, &quot;1&quot;), 1, 0) ) = 6 , 1, 0)</formula>
        <label>BPTSOCNP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSOCN__c</fullName>
        <formula>IF( ( BPTSBMN__c +  BPTSCMN__c +  BPTSDMN__c +  BPTSEMN__c + if(OR(BPTSDC__c = true, BPTSFC__c = true), 1, 0) +  if(ISPICKVAL(BPTSDURA__c, &quot;1&quot;), 1, 0) ) = 6 , 1, 0)</formula>
        <label>BPTSOCN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSOCP__c</fullName>
        <description>PTSD score criteria Parent</description>
        <formula>IF(BPTSOCNP__c  =  1, &apos;Yes&apos;, &apos;No&apos;)</formula>
        <label>BPTSOCP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BPTSOC__c</fullName>
        <formula>IF(BPTSOCN__c=1,&quot;Yes&quot;, &quot;No&quot;)</formula>
        <label>BPTSOC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BPTSORNP__c</fullName>
        <description>PTSD overall raw - Num (PTSD Met) Parent</description>
        <formula>BPTSBRNP__c  +  BPTSCRNP__c  +  BPTSDRNP__c  +  BPTSERNP__c</formula>
        <label>BPTSORNP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSORN__c</fullName>
        <formula>BPTSBRN__c  +  BPTSCRN__c  +  BPTSDRN__c  +  BPTSERN__c</formula>
        <label>BPTSORN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BPTSV10P__c</fullName>
        <description>My child has bad dreams about what happened, or other bad dreams.</description>
        <label>BPTSV10P</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>